--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 <header class='jumbotron subhead'>
     <div class='row'>
         <div class='span8'>
-            <h1>Path to Polygon Converter</h1>
-            <p class='lead'>Use this to convert svg paths into polygons suitable for use as CSS Shapes. To get started, pick a file and choose the settings you would like to the right.</p>
+            <h1>Path to Konva Polygon Converter</h1>
+            <p class='lead'>Use this to convert svg paths into polygons suitable for Konva.Line. To get started, pick a file and choose the settings you would like to the right.</p>
         </div>
         <div class='span4' id="my-gui-container">
             <input id="files" type="file" name="files[]" />
